# reinforce_with_discrete_reward

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  reinforce.ipynb  requirements.txt
config/: main.yaml
rwdr/: __init__.py  __main__.py  setup.py  utils.py
